infra/overlays/prod/httproute-host.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odoo-routes
spec:
  hostnames:
    - odoo.prod.yourdomain.tld
